; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_xegl_ctx.c_gfx_ctx_xegl_suppress_screensaver.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/drivers_context/extr_xegl_ctx.c_gfx_ctx_xegl_suppress_screensaver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RARCH_DISPLAY_X11 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @gfx_ctx_xegl_suppress_screensaver to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @gfx_ctx_xegl_suppress_screensaver(i8* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i8*, i8** %4, align 8
  %7 = call i64 (...) @video_driver_display_type_get()
  %8 = load i64, i64* @RARCH_DISPLAY_X11, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %15

11:                                               ; preds = %2
  %12 = call i32 (...) @video_driver_window_get()
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @x11_suspend_screensaver(i32 %12, i32 %13)
  store i32 1, i32* %3, align 4
  br label %15

15:                                               ; preds = %11, %10
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i64 @video_driver_display_type_get(...) #1

declare dso_local i32 @x11_suspend_screensaver(i32, i32) #1

declare dso_local i32 @video_driver_window_get(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
